Introduce the range of steps, other improvements

--- a/ABL_with_partial_repayments.cfg
+++ b/ABL_with_partial_repayments.cfg
@@ -7,7 +7,16 @@ CONSTANTS
     RateDue <- const_RateDue
     RateEarly <- const_RateEarly
     RatesLate <- const_RatesLate
+    S_min <- const_S_min
+    S_max <- const_S_max
     BLOCKS_IN_PERIOD <- const_BLOCKS_IN_PERIOD
+    START_BLOCK <- const_START_BLOCK
 
 INVARIANT TypeOK
-INVARIANT IsConsistent
+INVARIANT ConsistentProgress
+INVARIANT ConsistentRepayment
+INVARIANT ConsistentEnforcement
+INVARIANT ConsistentRemainder
+INVARIANT ConsistentPeriods
+
+ACTION_CONSTRAINT Logging
