Replace S_min/S_max with just S

--- a/ABL_with_partial_repayments.cfg
+++ b/ABL_with_partial_repayments.cfg
@@ -7,8 +7,7 @@ CONSTANTS
     RateDue <- const_RateDue
     RateEarly <- const_RateEarly
     RatesLate <- const_RatesLate
-    S_min <- const_S_min
-    S_max <- const_S_max
+    S <- const_S
     BLOCKS_IN_PERIOD <- const_BLOCKS_IN_PERIOD
     START_BLOCK <- const_START_BLOCK
 
