Add possibility of splitting the collateral on default

--- a/ABL_with_partial_repayments.cfg
+++ b/ABL_with_partial_repayments.cfg
@@ -2,10 +2,12 @@ SPECIFICATION Spec
 
 CONSTANTS
     P <- const_P
+    C <- const_C
     N <- const_N
     M <- const_M
     RateDue <- const_RateDue
     RateEarly <- const_RateEarly
+    RateCollateralPenalty <- const_RateCollateralPenalty
     RatesLate <- const_RatesLate
     S <- const_S
     BLOCKS_IN_PERIOD <- const_BLOCKS_IN_PERIOD
