--- a/ABL_with_partial_repayments.cfg
+++ b/ABL_with_partial_repayments.cfg
@@ -12,6 +12,7 @@ CONSTANTS
     S <- const_S
     BLOCKS_IN_PERIOD <- const_BLOCKS_IN_PERIOD
     START_BLOCK <- const_START_BLOCK
+    C_UNCOND <- const_C_UNCOND
 
 INVARIANT TypeOK
 INVARIANT ConsistentProgress
